--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 }
 
 .App{
+  margin-left: 30%;
   background: #23252C;
   width: 550px;
   height: 868px;
@@ -122,6 +123,7 @@ height: 100px;
 left: 0px;
 top: 760px;
 background: #1A1B21;
+margin-left: 30%;
 
 }
 
@@ -131,9 +133,12 @@ background: #1A1B21;
 
 .iconosfooter{
   margin-top: 5%;
-  margin-left: 27%;
+  margin-left: 29%;
   width: 200px;
   display: flex;
   justify-content: space-around;
 }
 
+body{
+  background-color: #DCDCDC;
+}
